# ros-pnc

./: .gitignore  .gitmodules  README.md  copy_data.sh
config/Magneto/: HWTEST.yaml  INTERFACE.yaml  SIMULATION.yaml  SIMULATIONWALK.yaml  SIMULATION_DATAGATHERING.yaml
magneto_2_description/: CMakeLists.txt
magneto_2_description/config/: magneto_2_auto_pose.yaml  (+4 more)
matlab/: main.m  main2d.m  notitle.m
src/magneto_pnc/: CMakeLists.txt  package.xml
src/magneto_pnc/include/magneto_pnc/: magneto_command.hpp  magneto_controlspec_container.hpp  magneto_definition.hpp  magneto_interface.hpp  magneto_interface_hw.hpp  magneto_planner_container.hpp  magneto_state_estimator.hpp  magneto_state_provider.hpp
src/magneto_pnc/include/magneto_pnc/magneto_control_architecture/: magneto_control_architecture_set.hpp  mpc_architecture.hpp  wbmc_architecture.hpp
src/magneto_pnc/include/magneto_pnc/magneto_estimator/: imu_system_model.old  magneto_state_estimator.hpp  magneto_state_estimator_hw.hpp  slip_observer.hpp
src/magneto_pnc/include/magneto_pnc/magneto_logic_interrupt/: climbing_interrupt_logic.hpp  hwtest_interrupt_logic.hpp  magneto_logic_interrupt_set.hpp  walking_interrupt_logic.hpp
src/magneto_pnc/include/magneto_pnc/magneto_planner/: magneto_com_planner.hpp  magneto_giwc_planner.hpp  magneto_goal_planner.hpp  magneto_planner_set.hpp
src/magneto_pnc/include/magneto_pnc/magneto_planner/constraints/: constraint.hpp
src/magneto_pnc/include/magneto_pnc/magneto_planner/reference_generator/: base_ori_trajectory_manager.hpp  com_trajectory_manager.hpp  foot_trajectory_manager.hpp  joint_trajectory_manager.hpp  reference_generator_set.hpp  smooth_transition_manager.hpp  trajectory_manager_base.hpp  transition_manager_base.hpp
src/magneto_pnc/include/magneto_pnc/magneto_specs/: MagnetSpec.hpp  contact_weight.hpp
src/magneto_pnc/include/magneto_pnc/magneto_wbc_controller/: magneto_mcwbc.hpp
src/magneto_pnc/include/magneto_pnc/magneto_wbc_controller/mcwbc/: mc_wbc.hpp  mf_mcwbc.hpp  mr_mcwbc.hpp
src/magneto_pnc/include/magneto_pnc/magneto_wbc_controller/state_machines/: full_support.hpp  state_machine_set.hpp  swing.hpp  transition.hpp
src/magneto_pnc/src/: magneto_controlspec_container.cpp  magneto_interface.cpp  magneto_interface_hw.cpp  magneto_planner_container.cpp  magneto_state_estimator.cpp  magneto_state_provider.cpp
src/magneto_pnc/src/magneto_control_architecture/: magneto_controlspec_container.cpp  magneto_planner_container.cpp  mpc_architecture.cpp  wbmc_architecture.cpp
src/magneto_pnc/src/magneto_estimator/: imu_system_model.old  magneto_state_estimator.cpp  magneto_state_estimator_hw.cpp  slip_observer.cpp
src/magneto_pnc/src/magneto_logic_interrupt/: climbing_interrupt_logic.cpp  hwtest_interrupt_logic.cpp  walking_interrupt_logic.cpp
src/magneto_pnc/src/magneto_planner/: magneto_com_planner.cpp  magneto_giwc_planner.cpp  magneto_goal_planner.cpp
src/magneto_pnc/src/magneto_planner/constraints/: constraint.cpp
src/magneto_pnc/src/magneto_planner/reference_generator/: base_ori_trajectory_manager.cpp  com_trajectory_manager.cpp  foot_trajectory_manager.cpp  joint_trajectory_manager.cpp  smooth_transition_manager.cpp
src/magneto_pnc/src/magneto_specs/: magnet_spec.cpp
src/magneto_pnc/src/magneto_wbc_controller/: magneto_mcwbc.cpp
src/magneto_pnc/src/magneto_wbc_controller/mcwbc/: mf_mcwbc.cpp  mr_mcwbc.cpp
src/magneto_pnc/src/magneto_wbc_controller/state_machines/: full_support.cpp  swing.cpp  transition.cpp
src/magneto_test/: CMakeLists.txt  package.xml
src/magneto_test/include/magneto_test/: magneto_dartsim.hpp
src/magneto_test/include/magneto_test/hwtest/: magneto_interface_include.hpp  magneto_interface_node.hpp
src/magneto_test/include/magneto_test/simulation/: magneto_dartsim.hpp
src/magneto_test/launch/: magneto_test.launch
src/magneto_test/src/: magneto_dartsim.cpp  main_sim.cpp
src/magneto_test/src/hwtest/: magneto_interface_node.cpp  main_hw.cpp
src/magneto_test/src/simulation/: magneto_dartsim.cpp  main_sim.cpp
src/my_pnc/: CMakeLists.txt  package.xml
src/my_pnc/include/my_pnc/: InterruptLogic.hpp
src/my_pnc/include/my_pnc/MagnetoPnC/: MagnetoDefinition.hpp  MagnetoInterface.hpp  MagnetoMotionAPI.hpp  MagnetoStateProvider.hpp
src/my_pnc/include/my_pnc/MagnetoPnC/MagnetoCtrlArchitecture/: MagnetoCtrlArchitecture.hpp
src/my_pnc/include/my_pnc/MagnetoPnC/MagnetoLogicInterrupt/: PullTestInterruptLogic.hpp  WalkingInterruptLogic.hpp
src/my_pnc/include/my_pnc/MagnetoPnC/MagnetoPlanner/: MagnetoContactTestPlanner.hpp  MagnetoPlannerSet.hpp  MagnetoReachabilityPlanner.hpp  MagnetoTrajectoryManager.hpp
src/my_pnc/include/my_pnc/MagnetoPnC/MagnetoStateMachine/: OneStepWalking.hpp  PullTest.hpp  StateMachineSet.hpp
src/my_pnc/include/my_pnc/MagnetoPnC/MagnetoTaskAndForceContainer/: MagnetoTaskAndForceContainer.hpp
src/my_pnc/include/my_pnc/TrajectoryManager/: BaseOriTrajectoryManager.hpp  CoMTrajectoryManager.hpp  FootPosTrajectoryManager.hpp  JointTrajectoryManager.hpp
src/my_pnc/src/: MagnetoPncNode.cpp
src/my_pnc/src/MagnetoPnC/: MagnetoInterface.cpp  MagnetoMotionAPI.cpp  MagnetoStateEstimator.cpp  MagnetoStateProvider.cpp
src/my_pnc/src/MagnetoPnC/MagnetoCtrl/: MagnetoMainController.cpp  MagnetoResidualController.cpp
src/my_pnc/src/MagnetoPnC/MagnetoCtrlArchitecture/: MagnetoCtrlArchitecture.cpp
src/my_pnc/src/MagnetoPnC/MagnetoLogicInterrupt/: PullTestInterruptLogic.cpp  WalkingInterruptLogic.cpp
src/my_pnc/src/MagnetoPnC/MagnetoPlanner/: MagnetoContactTestPlanner.cpp  MagnetoGIWCPlanner.cpp  MagnetoGoalPlanner.cpp  MagnetoReachabilityPlanner.cpp  MagnetoTrajectoryManager.cpp
src/my_pnc/src/MagnetoPnC/MagnetoStateMachine/: FullSupport.cpp  OneStepWalking.cpp  PullTest.cpp  Swing.cpp  Transition.cpp
src/my_pnc/src/MagnetoPnC/MagnetoTask/: CoMTask.cpp
src/my_pnc/src/MagnetoPnC/MagnetoTaskAndForceContainer/: MagnetoTaskAndForceContainer.cpp
src/my_pnc/src/TrajectoryManager/: BaseOriTrajectoryManager.cpp  CoMTrajectoryManager.cpp  FootPosTrajectoryManager.cpp  JointTrajectoryManager.cpp
(+176 files in other folders)
