<?xml version="1.0"?>
<package format="2">
  <name>magneto_test</name>
  <version>0.0.0</version>
  <description>The magneto_test package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="lee357@todo.todo">lee357</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <build_depend>pnc_utils</build_depend>
  <build_export_depend>pnc_utils</build_export_depend>
  <exec_depend>pnc_utils</exec_depend>

  <build_depend>pnc_core</build_depend>
  <build_export_depend>pnc_core</build_export_depend>
  <exec_depend>pnc_core</exec_depend>

  <build_depend>magneto_pnc</build_depend>
  <build_export_depend>magneto_pnc</build_export_depend>
  <exec_depend>magneto_pnc</exec_depend>

  


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
